@@ -1,6 +1,6 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.12.4
+VERSION=1.12.5
 
 DEPENDENCY="zeda=1.6.47;zm=1.6.9"
 
